--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,16 +4,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_php7:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - name: docker build php7 base
         run: |
           docker build --build-arg PHP_VERSION=7.4.3 -f ./php/Dockerfile -t php_base:7 .
+
+
+  build_php8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: docker build php8 base
         run: |
           docker build --build-arg PHP_VERSION=8.0.3 -f ./php/Dockerfile -t php_base:8 .
+
+  build_android:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: docker build android base
         run: |
           docker build -f ./android/Dockerfile -t android_base:latest .
