--- a/php-dev/xdebug.ini
+++ b/php-dev/xdebug.ini
@@ -1,5 +1,5 @@
-xdebug.mode=debug
-xdebug.discover_client_host = 0
-xdebug.max_nesting_level=1024
-xdebug.start_with_request = trigger
+xdebug.mode=debug, profile
+xdebug.idekey=PHPSTORM
+xdebug.start_with_request = yes
+xdebug.discover_client_host=false
 xdebug.client_host=host.docker.internal
