--- a/php-dev/xdebug.ini
+++ b/php-dev/xdebug.ini
@@ -1,5 +1,5 @@
 xdebug.mode=debug, profile
 xdebug.idekey=PHPSTORM
-xdebug.start_with_request = yes
+xdebug.start_with_request = trigger
 xdebug.discover_client_host=false
 xdebug.client_host=host.docker.internal
